<resources>
    <string name="app_name">commov</string>
    <string name="notas">notas</string>
    <string name="empty_not_saved">Nota vazia!!</string>
    <string name="inserttitulo">Titulo</string>
    <string name="insertdesc">Descrição</string>
    <string name="save">Guardar</string>
    <string name="nova">Nova Nota</string>
    <string name="edit">Editar Nota</string>
    <string name="inserttit">Adicionar titulo</string>
    <string name="city_report">City Report</string>
    <string name="login">Login</string>
    <string name="registar">Registar</string>
    <string name="email_vazio_error">É necessário inserir email</string>
    <string name="pass_vazia_Error">Password vazia</string>
    <string name="email_pass_empy">Insira email e password</string>
    <string name="email_pass_error">Email ou password incorretos</string>
    <string name="title_activity_maps_report">Map</string>
    <string name="title_activity_map_reports">Map</string>
    <string name="preference_file_key">sp</string>
    <string name="sharedlogin">loginsp</string>
    <string name="sharedemail">emailsp</string>
    <string name="shareduser">idusersp</string>
    <string name="pergunta_fim_Sessao">Deseja Terminar Sessão?</string>
    <string name="logout_alert_title">Logout</string>
    <string name="resposta_alert_Sim">Sim</string>
    <string name="resposta_alert_nao">Não</string>
    <string name="coords_txt_view">Coordenadas:</string>
    <string name="loc">Localização Atual</string>
    <string name="transito">Trânsito</string>
    <string name="obras">Obras</string>
    <string name="buraco">Buraco</string>
    <string name="acidente">Acidente</string>
    <string name="outros">Outros</string>
    <string name="rport_add_sucesso">Report adicionado com sucesso</string>
    <string name="erro_add_report">Erro ao inserir report</string>
    <string name="Nomeimg">Nome</string>
    <string name="reportTitAdd">Titulo do report</string>
    <string name="descRepAdd">Descrição do report</string>
    <string name="EscolherIMG">Escolher</string>
    <string name="addreportbtn">Adicionar</string>
    <string name="Report">Report</string>
    <string name="Descricao">Descrição</string>
    <string name="editR">Editar</string>
    <string name="elimR">Eliminar</string>
    <string name="atualizaReport">Report Atualizado</string>
    <string name="erroAtualizaReport">\"Erro ao atualizar Report \"</string>
    <string name="erroElim">Report Eliminado com sucesso</string>
    <string name="erroElimerro">Erro ao eliminar Report</string>
</resources>