<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_marginTop="100px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nova"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textColor="@color/purple_500">
        </TextView>



    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/insertdesc"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <Button
        android:layout_marginTop="20px"
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        />
</LinearLayout>